# roy

./: .gitignore  404.html  LICENSE  Makefile  README.md  blog.html  hatch_build.py  index.html  markdown-page.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: publish-to-pypi.yml  test.yml
assets/css/: styles.9295cecc.css
assets/js/: 0dc9c8e4.bc1a25c1.js  0e384e19.47c4c21c.js  18c41134.7ddc2b3a.js  1df93b7f.4ce3d86d.js  1df93b7f.a0daec09.js  1e4232ab.ecddc1ed.js  22e47441.c29b91d8.js  2faf812b.7369df8a.js  393be207.15f5d80c.js  393be207.78eed0e5.js  393be207.979527a9.js  42898f4b.e4d921b0.js  4fd274ec.1008d72d.js  533a09ca.97f0b6fc.js  59362658.ce444e63.js  5c868d36.9997d885.js  60875e34.8a4c59ed.js  60875e34.af075c6d.js  60875e34.f4f9e782.js  70c42a19.d93869c9.js  73664a40.46e247a2.js  7661071f.3e5b07b1.js  79bd6757.1a5e5142.js  79bd6757.4d76572b.js  814f3328.9e851537.js  822bd8ab.de367bae.js  8717b14a.0eb3bd4b.js  925b3f96.d8dcb317.js  a3f4f443.6fab025d.js  a94703ab.e78efd1c.js  acecf23e.1c236906.js  bd842bee.192592dc.js  common.4c5067df.js  d9f32620.e7b9ad56.js  dff1c289.74ae17dc.js  e273c56f.53493b25.js  e44a2883.39269c5d.js  e879716c.126a2423.js  f4f34a3a.1a070bc3.js  f54e0561.d6219eb2.js  (+9 more)
blog/: archive.html  atom.xml  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: intro.html  tutorial.html
examples/: .gitignore
tests/: roy_dict_single.py  roy_list_single.py  roy_set_single.py  test_utils.py
website/: README.md  docusaurus.config.ts  package-lock.json  package.json
(+98 files in other folders)
