[build-system]
requires = ["setuptools>=42", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "roy_on_ray"
version = "0.0.1c"
authors = [
  { name="Seung-seob Lee", email="seung-seob.lee@yale.edu" },
]
description = "A data structure layer for mutable remote objects on Ray."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yale-NeRD/roy"
Issues = "https://github.com/Yale-NeRD/roy/issues"
